package updates
* POM.XML update
* Yaml file merge and update