@@ -68,7 +68,6 @@
                     <release>${jdk.version}</release>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -106,26 +105,6 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <version>3.6.0</version>
-                        <executions>
-                            <execution>
-                                <id>copy-javafx-mods-win</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>copy-dependencies</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${project.build.directory}/mods</outputDirectory>
-                                    <includeGroupIds>org.openjfx</includeGroupIds>
-                                    <stripVersion>true</stripVersion>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
                         <version>3.2.0</version>
@@ -151,10 +130,8 @@
                                         <argument>${main.class}</argument>
                                         <argument>--main-jar</argument>
                                         <argument>${project.build.finalName}.jar</argument>
-                                        <argument>--module-path</argument>
-                                        <argument>${project.build.directory}/mods</argument>
-                                        <argument>--add-modules</argument>
-                                        <argument>javafx.base,javafx.controls,javafx.graphics,javafx.swing,java.logging</argument>
+                                        <argument>--java-options</argument>
+                                        <argument>-Dfile.encoding=UTF-8</argument>
                                         <argument>--app-version</argument>
                                         <argument>${project.version}</argument>
                                         <argument>--vendor</argument>
@@ -188,31 +165,12 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <version>3.6.0</version>
-                        <executions>
-                            <execution>
-                                <id>copy-javafx-mods-mac</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>copy-dependencies</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${project.build.directory}/mods</outputDirectory>
-                                    <includeGroupIds>org.openjfx</includeGroupIds>
-                                    <stripVersion>true</stripVersion>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
                         <version>3.2.0</version>
                         <executions>
                             <execution>
-                                <id>jpackage-mac</id>
+                                <id>jpackage-mac-x86_64</id>
                                 <phase>package</phase>
                                 <goals>
                                     <goal>exec</goal>
@@ -232,10 +190,6 @@
                                         <argument>${main.class}</argument>
                                         <argument>--main-jar</argument>
                                         <argument>${project.build.finalName}.jar</argument>
-                                        <argument>--module-path</argument>
-                                        <argument>${project.build.directory}/mods</argument>
-                                        <argument>--add-modules</argument>
-                                        <argument>javafx.base,javafx.controls,javafx.graphics,javafx.swing,java.logging</argument>
                                         <argument>--app-version</argument>
                                         <argument>${project.version}</argument>
                                         <argument>--vendor</argument>
@@ -267,25 +221,6 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <version>3.6.0</version>
-                        <executions>
-                            <execution>
-                                <id>copy-javafx-mods-mac-aarch64</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>copy-dependencies</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${project.build.directory}/mods</outputDirectory>
-                                    <includeGroupIds>org.openjfx</includeGroupIds>
-                                    <stripVersion>true</stripVersion>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
                         <version>3.2.0</version>
@@ -311,10 +246,6 @@
                                         <argument>${main.class}</argument>
                                         <argument>--main-jar</argument>
                                         <argument>${project.build.finalName}.jar</argument>
-                                        <argument>--module-path</argument>
-                                        <argument>${project.build.directory}/mods</argument>
-                                        <argument>--add-modules</argument>
-                                        <argument>javafx.base,javafx.controls,javafx.graphics,javafx.swing,java.logging</argument>
                                         <argument>--app-version</argument>
                                         <argument>${project.version}</argument>
                                         <argument>--vendor</argument>
